--- a/home.html
+++ b/home.html
@@ -10,22 +10,102 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rochester&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="home.css" />
     <title>Document</title>
   </head>
   <body>
-    <navbar class="d-flex justify-content-between">
-      <button class="category">Burguers</button>
-      <button class="category">Tacos</button>
-      <button class="category">Salads</button>
-      <button class="category">Desserts</button>
-      <button class="category">Drinks and Sides</button>
-    </navbar>
-    <h1 id="currentItemName"></h1>
-    <div id="dashboard" class="d-flex flex-wrap"></div>
+    <nav
+      class="d-flex flex-wrap-reverse justify-content-center justify-content-sm-between mt-5"
+    >
+      <div class="mr-auto align-self-start">
+        <h1 class="pageTitle align-self-start">Restaurant & Lounge</h1>
+      </div>
+      <div class="d-flex">
+        <img
+          src="imgs/cartIcon.png"
+          alt="Icono carrito de compras"
+          class="btn carrito align-self-end"
+          id="botonCarrito"
+        />
+        <p class="itemNumber align-self-end" id="itemNumber"></p>
+      </div>
+    </nav>
+    <hr class="mt-0 mb-3" />
+    <img src="imgs/banner.jpg" alt="Imagen banner" class="w-100" />
+    <hr class="m-2" />
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand d-sm-none" id="navbarTitle"></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <button class="nav-link category active" aria-current="page">
+                Burguers
+              </button>
+            </li>
+            <li class="nav-item">
+              <button class="nav-link category active">Tacos</button>
+            </li>
+            <li class="nav-item">
+              <button class="nav-link category active">Salads</button>
+            </li>
+            <li class="nav-item">
+              <button class="nav-link category active">Desserts</button>
+            </li>
+            <li class="nav-item">
+              <button class="nav-link category active">Drinks and Sides</button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="d-flex justify-content-center mt-3">
+      <h1 id="currentItemName"></h1>
+    </div>
+    <hr class="mt-1 mb-3" />
+
+    <div
+      id="dashboard"
+      class="d-flex flex-wrap justify-content-evenly w-75 mx-auto"
+    ></div>
   </body>
   <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"
   ></script>
   <script src="homejs.js"></script>
